@@ -1,3 +1,6 @@
+* Clock select bugfix from Dave Mills.
+* [Bug 1554]: peer may stay selected as system peer after becoming
+  unreachable.
 * [Bug 1644] from 4.2.6p3: cvo.sh should use lsb_release to identify
   linux distros.
 (4.2.7p57) 2010/09/27 Released by Harlan Stenn <stenn@ntp.org>
